--- a/css/hopscotch.less
+++ b/css/hopscotch.less
@@ -36,6 +36,7 @@ div#hopscotch-bubble {
   #hopscotch-bubble-container {
     padding: 20px;
     position: relative;
+    -webkit-font-smoothing: antialiased; /* to fix text flickering */
   }
 
   #hopscotch-bubble-close {
